src/New.css
@import url("https://cdnjs.cloudflare.com/ajax/libs/pretendard/1.3.5/static/pretendard-dynamic-subset.css");
@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

.App{
    @apply pl-5 pr-5 bg-white text-black font-Ptd text-center mx-auto;
    @apply dark:bg-zinc-800 dark:text-white;
}

.App-header {
    @apply content-center;
}

.card { 
    @apply p-6 mb-3 justify-center items-center font-medium bg-white rounded-lg drop-shadow-[0_3px_4px_rgba(10,10,10,0.2)];
    @apply dark:bg-gray-700 dark:border-gray-700 dark:text-white dark:drop-shadow-[0_4px_3px_rgba(10,10,10,0.3)];
}
.card.p3 { 
    @apply p-3;
}
.card.bus {
    @apply h-[17rem];
}

.btn {
    @apply hover:bg-blue-100 hover:text-black border-none flex-auto;
}
.btn.active{
    @apply bg-blue-300 dark:text-black drop-shadow-none shadow-inner transition-all ease-out duration-700;
}
.btn_group{
    @apply flex justify-between content-evenly items-stretch gap-4;
}

#title{
    @apply font-bold p-3 text-3xl pt-6 pb-3;
}

